# fhgr-sweng-pattern-recognition

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
config/: config.toml
src/: app.py  config.py
src/app_stored_images/: __main__.py  app.py
src/app_webcam/: __main__.py  app.py
src/image_proc/: image_proc.py
src/logger/: console_logger.py
src/output/pattern_logger/: console_logger.py  csv_logger.py  pattern_logger.py
src/output/tts/: tts.py  tts_offline.py  tts_online.py
src/output/visualizer/: visualizer.py
src/pattern_logger/: console_logger.py  csv_logger.py  pattern_logger.py
src/pattern_processor/: pattern_filter.py
src/single_image_proc/: __main__.py  app.py
