[tool.poetry]
name = "fhgr-sweng-pattern-recognition"
version = "0.1.0"
description = ""
authors = ["Dominic Eicher <nic.eicher@sunrise.ch>", "Ralph Ursprung <ralph.ursprung@gmail.com>"]
readme = "README.md"
packages = [{include = "test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
