[tool.poetry]
name = "fhgr-sweng-pattern-recognition"
version = "0.1.0"
description = ""
authors = ["Dominic Eicher <nic.eicher@sunrise.ch>", "Ralph Ursprung <ralph.ursprung@gmail.com>", "Klims Saikins <klims.saikins@cedes.com>"]
readme = "README.md"
packages = [{include = "**/*", from = "src"}]
exclude = ["src/test"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
